--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -5,7 +5,8 @@
     <item
         android:id="@+id/qr"
         android:icon="@drawable/ic_qr"
-        android:title="Códigos QR"/>
+        android:title="Códigos QR"
+        />
     <item
         android:id="@+id/barras"
         android:icon="@drawable/ic_barras"
