--- a/app/src/main/res/layout/fragment_codigo_otros.xml
+++ b/app/src/main/res/layout/fragment_codigo_otros.xml
@@ -2,10 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#09212A"
     android:layout_height="match_parent"
+    android:background="#0A2A09"
+    tools:context=".CodigoOtros">
 
-    tools:context=".CodigoBarras">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Código de Barra"
+            android:text="Otros Códigos"
             android:textColor="#FFF"
             android:layout_centerHorizontal="true"
             android:textSize="35dp"
@@ -22,22 +22,23 @@
             />
 
         <TextView
-            android:id="@+id/link2"
+            android:id="@+id/link3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:autoLink="none"
-            android:text="No se ha escaneado ningún código"
+            android:autoLink="all"
+            android:text="No se ha realizado ningún escaneo"
             android:textColor="#fff"
             android:textStyle="bold"
             android:layout_marginTop="400dp"/>
 
         <Button
-            android:id="@+id/btnScanBarras"
+            android:id="@+id/btnScanOtros"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Escanear"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
+
 </FrameLayout>
