--- a/app/src/main/res/layout/fragment_codigoqr.xml
+++ b/app/src/main/res/layout/fragment_codigoqr.xml
@@ -9,7 +9,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Códigos QR"
+            android:textColor="#FFF"
+            android:layout_centerHorizontal="true"
+            android:textSize="35dp"
+            android:layout_marginTop="90dp"
+            android:textStyle="bold|italic"
+            />
         <TextView
             android:id="@+id/link"
             android:layout_width="match_parent"
