--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="SELECIONA UNA OPCIÓN"
-        android:textSize="30dp"
+        android:text="SELECCIONA UNA OPCIÓN"
+        android:textSize="28dp"
         android:textStyle="bold"
         android:textColor="#A7A7A7"/>
 
