--- a/ScanCam/app/src/main/res/layout/activity_terminos.xml
+++ b/ScanCam/app/src/main/res/layout/activity_terminos.xml
@@ -6,8 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".Terminos">
 
+
+
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="FULL_BANNER"
+        android:visibility="visible"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
+
     <WebView
         android:id="@+id/web1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="59dp"/>
 </RelativeLayout>
