--- a/ScanCam/app/src/main/res/layout/activity_politicas.xml
+++ b/ScanCam/app/src/main/res/layout/activity_politicas.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Politicas">
 
+    <!--
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
@@ -15,12 +16,14 @@
         ads:adSize="FULL_BANNER"
         android:visibility="visible"
         ads:adUnitId="ca-app-pub-6691938542138083/2025304636"></com.google.android.gms.ads.AdView>
+     -->
 
+    <!--android:layout_marginTop="59dp"-->
     <WebView
         android:id="@+id/web2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="59dp"
+        
         />
 
 </RelativeLayout>
