--- a/ScanCam/app/src/main/res/layout/activity_terminos.xml
+++ b/ScanCam/app/src/main/res/layout/activity_terminos.xml
@@ -7,7 +7,7 @@
     tools:context=".Terminos">
 
 
-<!--
+
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
@@ -16,13 +16,14 @@
         android:layout_centerHorizontal="true"
         ads:adSize="FULL_BANNER"
         android:visibility="visible"
-        ads:adUnitId="ca-app-pub-6691938542138083/7110110355"></com.google.android.gms.ads.AdView>
--->
+        ads:adUnitId="ca-app-pub-6691938542138083/2431165521"></com.google.android.gms.ads.AdView>
 
-    <!--android:layout_marginTop="59dp"-->
+
+
     <WebView
         android:id="@+id/web1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="59dp"
         />
 </RelativeLayout>
