--- a/ScanCam/app/src/main/res/layout/activity_main.xml
+++ b/ScanCam/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
+        android:id="@+id/adView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
