--- a/ScanCam/app/src/main/res/layout/activity_splash_screen.xml
+++ b/ScanCam/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,8 +10,8 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/logo"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:src="@mipmap/logo_xxxhdpi" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
