--- a/ScanCam/app/src/main/res/values/colors.xml
+++ b/ScanCam/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#161B22</color>
     <color name="white">#FFFFFFFF</color>
+
+    //Menu Colores
+    <color name="c1">#161B22</color>
+    <color name="c2">#0D1117</color>
 </resources>
