Se elimino codigo antiguo de main y se creo el nuevo menu en activity main

--- a/ScanCam/app/src/main/res/layout/activity_main.xml
+++ b/ScanCam/app/src/main/res/layout/activity_main.xml
@@ -1,66 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="#0D1117">
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navegador"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#161B22"
-        app:itemIconTint="#FFF"
-        app:itemTextColor="#FFF"
-        app:menu="@menu/navigation">
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
-
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="150dp"
-        android:src="@drawable/ic_baseline_arrow_circle_up_24"
-
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="SELECCIONA UNA OPCIÓN"
-        android:textSize="28dp"
-        android:textStyle="bold"
-        android:textColor="#A7A7A7"/>
+    tools:context=".MainActivity">
 
     <FrameLayout
-        android:id="@+id/fragments"
+        android:id="@+id/frameContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="56dp" />
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView1"
-        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bnvMenu"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bnvMenu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:layout_centerHorizontal="true"
-        ads:adSize="FULL_BANNER"
-        android:visibility="visible"
-        ads:adUnitId="ca-app-pub-6691938542138083/8639111536"></com.google.android.gms.ads.AdView>
+        android:background="@color/teal_200"
+        app:itemRippleColor="#fff"
+        app:itemTextColor="#000"
+        app:itemIconTint="#000"
+        app:menu="@menu/bottom_navigation_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"/>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="FULL_BANNER"
-        android:visibility="visible"
-        ads:adUnitId="ca-app-pub-6691938542138083/9050175071"></com.google.android.gms.ads.AdView>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
