--- a/ScanCam/app/src/main/res/layout/activity_main.xml
+++ b/ScanCam/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:id="@+id/bnvMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/teal_200"
+        android:background="@color/green_3"
         app:itemRippleColor="#fff"
         app:itemTextColor="#000"
         app:itemIconTint="#000"
