Se agrego el menu funcional

--- a/ScanCam/app/src/main/res/layout/activity_main.xml
+++ b/ScanCam/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,10 @@
         android:id="@+id/bnvMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green_3"
-        app:itemRippleColor="#fff"
-        app:itemTextColor="#000"
-        app:itemIconTint="#000"
+        android:background="@color/other_2"
+        app:itemRippleColor="@color/normal_1"
+        app:itemTextColor="@color/normal_1"
+        app:itemIconTint="@color/normal_1"
         app:menu="@menu/bottom_navigation_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
