--- a/ScanCam/app/src/main/res/layout/fragment_codigosbarra.xml
+++ b/ScanCam/app/src/main/res/layout/fragment_codigosbarra.xml
@@ -3,4 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Codigosbarra"/>
+    tools:context=".Codigosbarra"
+    android:background="@color/grey_2">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Código de Barra"
+            android:textColor="#FFF"
+            android:layout_centerHorizontal="true"
+            android:textSize="35dp"
+            android:layout_marginTop="90dp"
+            android:textStyle="bold|italic"
+            />
+
+        <TextView
+            android:id="@+id/link2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:autoLink="none"
+            android:text="No se ha escaneado ningún código"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:layout_marginTop="400dp"/>
+
+        <Button
+            android:id="@+id/btnScanBarras"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Escanear"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
+</FrameLayout>
