--- a/ScanCam/app/src/main/res/layout/fragment_codigosotros.xml
+++ b/ScanCam/app/src/main/res/layout/fragment_codigosotros.xml
@@ -3,4 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Codigosotros"/>
+    tools:context=".Codigosotros"
+    android:background="@color/normal_2">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Otros Códigos"
+            android:textColor="#FFF"
+            android:layout_centerHorizontal="true"
+            android:textSize="35dp"
+            android:layout_marginTop="90dp"
+            android:textStyle="bold|italic"
+            />
+
+        <TextView
+            android:id="@+id/link3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:autoLink="all"
+            android:text="No se ha realizado ningún escaneo"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:layout_marginTop="400dp"/>
+
+        <Button
+            android:id="@+id/btnScanOtros"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Escanear"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
+
+</FrameLayout>
