Se han corregido los nombres de colores y textos

--- a/ScanCam/app/src/main/res/layout/fragment_codigosotros.xml
+++ b/ScanCam/app/src/main/res/layout/fragment_codigosotros.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Otros Códigos"
-            android:textColor="#FFF"
+            android:textColor="@color/normal_1"
             android:layout_centerHorizontal="true"
             android:textSize="35dp"
             android:layout_marginTop="90dp"
@@ -26,8 +26,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:autoLink="all"
-            android:text="No se ha realizado ningún escaneo"
-            android:textColor="#fff"
+            android:text="@string/NoScan"
+            android:textColor="@color/normal_1"
             android:textStyle="bold"
             android:layout_marginTop="400dp"/>
 
@@ -35,7 +35,7 @@
             android:id="@+id/btnScanOtros"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Escanear"
+            android:text="@string/Scan"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
