--- a/ScanCam/app/src/main/res/menu/menu_alto.xml
+++ b/ScanCam/app/src/main/res/menu/menu_alto.xml
@@ -5,16 +5,16 @@
 
     <item
         android:id="@+id/it1"
-        android:title="Terminos y Condiciones"
+        android:title="@string/Terminos"
         app:showAsAction="never"/>
     <item
         android:id="@+id/it2"
-        android:title="Politica de Privacidad"
+        android:title="@string/Politica"
         app:showAsAction="never"/>
     <item
         android:id="@+id/it3"
         android:icon="@drawable/share"
-        android:title="share"
+        android:title="@string/compartir"
         app:showAsAction="ifRoom"/>
 
 </menu>
