--- a/ScanCam/app/src/main/res/values/colors.xml
+++ b/ScanCam/app/src/main/res/values/colors.xml
@@ -33,4 +33,6 @@
     <color name="other_1">#FFCBCB</color>
     <color name="other_2">#161B22</color>
     <color name="other_3">#0D1117</color>
+    <color name="other_4">#008F39</color>
+    <color name="other_5">#FF0000</color>
 </resources>
