--- a/ScanCam/app/src/main/res/layout/activity_escaneo.xml
+++ b/ScanCam/app/src/main/res/layout/activity_escaneo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,6 +11,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
         android:text="@string/Escaneo_Complete"
         android:textColor="@color/normal_1"
         android:textSize="35dp"
@@ -23,11 +25,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autoLink="web"
+        android:layout_centerInParent="true"
         android:text="@string/NoScan_1"
         android:textColor="@color/normal_1"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="95dp"
         tools:layout_editor_absoluteY="349dp" />
 
+    <TextView
+        android:id="@+id/txtSecure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="400dp"
+        android:text="@string/NNN"
+        android:textColor="@color/normal_1"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="95dp"
+        tools:layout_editor_absoluteY="349dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btncopy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="425dp"
+        android:text="@string/copy" />
+
+
+</RelativeLayout>
