--- a/ScanCam/app/src/main/res/layout/activity_escaneo.xml
+++ b/ScanCam/app/src/main/res/layout/activity_escaneo.xml
@@ -24,8 +24,8 @@
         android:id="@+id/link4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autoLink="web"
         android:layout_centerInParent="true"
+        android:autoLink="web"
         android:text="@string/NoScan_1"
         android:textColor="@color/normal_1"
         android:textStyle="bold"
@@ -52,6 +52,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="400dp"
         android:text="@string/copy" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="152dp"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/ic_negative" />
 
 
 </RelativeLayout>
