--- a/ScanCam/app/src/main/res/values/colors.xml
+++ b/ScanCam/app/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="other_3">#0D1117</color>
     <color name="other_4">#008F39</color>
     <color name="other_5">#FF0000</color>
+    <color name="other_6">#7F0000</color>
 </resources>
