--- a/ScanCam/app/src/main/res/layout/fragment_codigosbarra.xml
+++ b/ScanCam/app/src/main/res/layout/fragment_codigosbarra.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Código de Barra"
+            android:text="@string/frag_bar"
             android:textColor="@color/normal_1"
             android:layout_centerHorizontal="true"
             android:textSize="35dp"
