Se cambiaron algunos colores

--- a/ScanCam/app/src/main/res/values/colors.xml
+++ b/ScanCam/app/src/main/res/values/colors.xml
@@ -36,4 +36,5 @@
     <color name="other_4">#008F39</color>
     <color name="other_5">#FF0000</color>
     <color name="other_6">#7F0000</color>
+    <color name="other_7">#100B33</color>
 </resources>
