--- a/ScanCam/app/src/main/res/layout/activity_informacion.xml
+++ b/ScanCam/app/src/main/res/layout/activity_informacion.xml
@@ -26,7 +26,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Qué significa esto?"
+        android:text="@string/que"
         android:textSize="30dp"
         android:textStyle="bold|italic"
         android:layout_centerHorizontal="true"
@@ -36,7 +36,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Scan Cam"
+        android:text="@string/app_name"
         android:textSize="30dp"
         android:textStyle="bold|italic"
         android:layout_centerHorizontal="true"
