Se mejoro el app

--- a/ScanCam/app/src/main/res/layout/activity_escaneo.xml
+++ b/ScanCam/app/src/main/res/layout/activity_escaneo.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="155dp"
         android:text="@string/Escaneo_Complete"
         android:textColor="@color/normal_1"
         android:textSize="35dp"
@@ -54,16 +54,11 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="400dp"
-        android:text="@string/copy" />
+        android:text="@string/copy"
+        android:backgroundTint="@android:color/white"
+        android:textColor="@android:color/black"/>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:visibility="invisible"
-        android:layout_marginTop="152dp"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/ic_negative" />
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
