--- a/ScanCam/app/src/main/res/layout/fragment_codigosqr.xml
+++ b/ScanCam/app/src/main/res/layout/fragment_codigosqr.xml
@@ -15,7 +15,7 @@
             android:textColor="@color/normal_1"
             android:layout_centerHorizontal="true"
             android:textSize="35dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="110dp"
             android:textStyle="bold|italic"
             />
 
@@ -25,7 +25,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Scan"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:backgroundTint="@android:color/white"
+            android:textColor="@android:color/black"/>
 
 
     </RelativeLayout>
